# umbongo

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  OVMF.fd  README.md  build.toml  configure.py
boot/: BootInfo.hh  CMakeLists.txt  Efi.hh  Elf.hh  boot.cc  boot_info.hh  build.toml  efi.hh
coreutils/: CMakeLists.txt  build.toml  cat.cc  ls.cc  lspci.cc  syscfg.cc  te.cc  yes.cc
dynamic-linker/: CMakeLists.txt  build.toml  main.cc
init/: CMakeLists.txt  init.cc  linker.ld
kernel/: CMakeLists.txt  Config.hh.in  Console.cc  Console.hh  Dmesg.cc  Dmesg.hh  Error.hh  Font.hh  Handle.hh  HandleKind.hh  KeyEvent.hh  Log.cc  Port.hh  ScopedLock.hh  SpinLock.hh  SysError.hh  SysResult.hh  Syscall.cc  Syscall.hh  SyscallTypes.hh  Syscalls.cc  Syscalls.hh  UbSan.cc  UserPtr.hh  build.toml  console.cc  dmesg.cc  dmesg.hh  entry.cc  error.hh  font.hh  kmain.cc  linker.ld  port.hh  scoped_lock.hh  spin_lock.cc  spin_lock.hh  sys_result.hh  syscalls.cc  ub_san.cc
kernel/acpi/: ApicTable.cc  ApicTable.hh  GenericAddress.hh  HpetTable.hh  InterruptController.hh  PciTable.cc  PciTable.hh  RootTable.cc  RootTable.hh  RootTablePtr.hh  Table.cc  Table.hh  apic_table.cc  apic_table.hh  generic_address.hh  hpet_table.hh  interrupt_controller.hh  pci_table.cc  pci_table.hh  root_table.cc  root_table.hh  root_table_ptr.hh  table.cc  table.hh
kernel/api/: BootFs.hh  Constants.h  Errors.in  Syscalls.in  Types.h  UserFs.hh  errors.in  types.h
kernel/arch/: arch.hh  cpu.hh  paging.hh  register_state.hh
kernel/arch/amd64/: cpu.S  cpu.cc  cpu.hh  cpu_id.hh  descriptor.hh  interrupt.S  linker.ld  register_state.hh  smp.S  syscall.S  syscall.cc
kernel/cpu/: InterruptDisabler.hh  LocalApic.cc  LocalApic.hh  Paging.hh  PrivilegeLevel.hh  Processor.cc  Processor.hh  RegisterState.hh  cpu.asm  interrupts.asm  local_apic.cc  local_apic.hh  paging.hh  processor.cc  processor.hh  register_state.hh  smp.asm
kernel/dev/: DevFs.cc  DevFs.hh  Device.cc  Device.hh  DmesgDevice.cc  DmesgDevice.hh  FramebufferDevice.cc  FramebufferDevice.hh  dev_fs.cc  dev_fs.hh  device.cc  device.hh  dmesg_device.cc  dmesg_device.hh  framebuffer_device.cc  framebuffer_device.hh
kernel/devices/: DevFs.cc  DevFs.hh  Device.cc  Device.hh  FramebufferDevice.cc  FramebufferDevice.hh  UsbKeyboardDevice.cc  UsbKeyboardDevice.hh
kernel/fs/: File.hh  FileHandle.cc  FileHandle.hh  FileSystem.hh  Inode.cc  Inode.hh  InodeFile.cc  InodeFile.hh  InodeId.hh  InodeType.hh  Pipe.cc  Pipe.hh  RamFs.cc  RamFs.hh  UserFs.cc  UserFs.hh  Vfs.cc  Vfs.hh  file.hh  file_handle.cc  file_handle.hh  file_system.hh  inode.cc  inode.hh  inode_file.cc  inode_file.hh  ram_fs.cc  ram_fs.hh  vfs.cc  vfs.hh
kernel/intr/: InterruptManager.cc  InterruptManager.hh  InterruptType.hh  IoApic.cc  IoApic.hh  interrupt_manager.cc  interrupt_manager.hh  io_apic.cc  io_apic.hh
kernel/ipc/: Channel.cc  Channel.hh  DoubleBuffer.cc  DoubleBuffer.hh  Endpoint.cc  Endpoint.hh  Pipe.cc  Pipe.hh  ServerSocket.cc  ServerSocket.hh  Socket.cc  Socket.hh  double_buffer.cc  double_buffer.hh  pipe.cc  pipe.hh  server_socket.cc  server_socket.hh  socket.cc  socket.hh
kernel/mem/: Heap.cc  Heap.hh  MemoryManager.cc  MemoryManager.hh  PhysicalPage.cc  PhysicalPage.hh  Region.cc  Region.hh  VirtSpace.cc  VirtSpace.hh  VirtualRange.hh  VmObject.cc  VmObject.hh  address_space.cc  address_space.hh  heap.cc  memory_manager.cc  memory_manager.hh  physical_page.cc  physical_page.hh  region.cc  region.hh  virt_space.cc  virt_space.hh  virtual_range.hh  vm_object.cc  vm_object.hh
kernel/pci/: Bus.hh  Device.cc  Device.hh  Enumerate.cc  Enumerate.hh  Function.cc  Function.hh  enumerate.cc  enumerate.hh  function.cc  function.hh
kernel/proc/: Hpet.cc  Hpet.hh  Process.cc  Process.hh  Scheduler.cc  Scheduler.hh  Thread.cc  Thread.hh  ThreadBlocker.cc  ThreadBlocker.hh  ThreadPriority.hh  process.cc  process.hh  scheduler.cc  scheduler.hh  thread.cc  thread.hh  thread_blocker.cc  thread_blocker.hh
kernel/time/: Hpet.cc  Hpet.hh  TimeManager.cc  TimeManager.hh  hpet.cc  hpet.hh  time_manager.cc  time_manager.hh
kernel/usb/: Contexts.hh  Descriptors.hh  Device.cc  Device.hh  Endpoint.cc  Endpoint.hh  EndpointType.hh  HostController.cc  HostController.hh  Interrupter.cc  Interrupter.hh  Port.cc  Port.hh  SlotState.hh  TransferType.hh  Transfers.hh  TrbRing.cc  TrbRing.hh  UsbManager.cc  UsbManager.hh
kernel/usb/hid/: KeyboardDevice.cc  KeyboardDevice.hh
libelf/: Elf.hh
libs/: CMakeLists.txt  build.toml
libs/posix/: .clang-tidy  CMakeLists.txt  assert.cc  assert.h  build.toml  ctype.cc  ctype.h  errno.h  fcntl.cc  fcntl.h  init.cc  inttypes.h  limits.h  locale.cc  locale.h  math.cc  math.h  setjmp.asm  setjmp.cc  setjmp.h  signal.cc  signal.h  stdarg.h  stddef.h  stdint.h  stdio.cc  stdio.h  stdlib.cc  stdlib.h  string.cc  string.h  time.cc  time.h  unistd.cc  unistd.h  utime.cc  utime.h
libs/posix/bits/: error.hh
libs/posix/sys/: cdefs.h  stat.cc  stat.h  time.h  types.h  wait.cc  wait.h
ports/: .gitignore
servers/: CMakeLists.txt  build.toml
servers/console/: CMakeLists.txt  EscapeParser.cc  EscapeParser.hh  Framebuffer.cc  Framebuffer.hh  IpcMessages.hh  Terminal.cc  Terminal.hh  build.toml  escape_parser.cc  escape_parser.hh  framebuffer.cc  framebuffer.hh  main.cc  terminal.cc  terminal.hh
shell/: Ast.cc  Ast.hh  CMakeLists.txt  Lexer.cc  Lexer.hh  LineEditor.cc  LineEditor.hh  Parser.cc  Parser.hh  Token.cc  Token.hh  Value.hh  ast.cc  (+12 more)
tools/: CMakeLists.txt  FontGenerator.cc  build.toml  mkfont.cc  mkfs.cc  ninja_syntax.py  run_iwyu.bash  run_qemu.bash
ustd/: Abi.cc  Algorithm.hh  Array.hh  Assert.cc  Assert.hh  Atomic.hh  Builtin.cc  CMakeLists.txt  Concepts.hh  Format.hh  Function.hh  Log.hh  Memory.cc  Memory.hh  Numeric.hh  Optional.hh  Result.hh  RingBuffer.hh  ScopeGuard.hh  ScopedChange.hh  Shareable.hh  SharedPtr.hh  Span.hh  SplayTree.hh  String.cc  String.hh  StringBuilder.cc  StringBuilder.hh  StringCast.hh  StringView.cc  StringView.hh  Traits.hh  Try.hh  Tuple.hh  Types.hh  UniquePtr.hh  Utility.hh  Vector.hh  algorithm.hh  array.hh  (+28 more)
(+193 files in other folders)
